--- a/index.html
+++ b/index.html
@@ -13,25 +13,32 @@
         main{
             background: white url('imagens/Frevo.png') left top repeat-x ;
             background-size: 30px;
-            max-width: 400px;
+            max-width: 320px;
             margin: auto;
             border-radius: 5px;
             text-indent: 30px;
             text-align: justify;
+            line-height: 1.5em;
             padding: 20px;
+            border: 5px solid bisque;
+            box-shadow: 0px 0px 3px 3px;
         }
         main h1{
             color: black;
+            text-align: center;
+            line-height: 1.2em;
         }
 
-        
+        main h2{
+            text-indent: -10px;
+        }
     </style>
 </head>
  
 <body>
     
     <main>
-<h1>História de Olinda PE</h1>
+<h1>História de Olinda Pernambuco</h1>
  
 <p>
     Olinda é um município brasileiro do estado de Pernambuco. Pertence à Região Metropolitana do Recife, distando seis quilômetros da capital pernambucana.
